# devstart-django

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTORS.txt  LICENSE  README.md  __about__.py  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  manage.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres
.github/workflows/: ci.yml
.idx/: dev.nix
.requirements/: base.txt  local.txt  production.txt
compose/local/: docker.env
compose/local/django/: Dockerfile  start
compose/local/django/celery/beat/: start
compose/local/django/celery/flower/: start
compose/local/django/celery/worker/: start
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile  start
compose/production/django/celery/beat/: start
compose/production/django/celery/flower/: start
compose/production/django/celery/worker/: start
compose/production/postgres/: Dockerfile
compose/production/traefik/: traefik.yml
config/: asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/: README.md
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
src/: conftest.py
src/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
src/static/sass/: project.scss
src/templates/: base.html
src/users/: models.py  views.py
src/users/migrations/: 0001_initial.py
src/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
webpack/: common.config.js
